tests/valid/valid_composite_subset.csl
config CompositeSubset {
  allowed: { region: string; env: string; }[];
  selected: { region: string; env: string; }[];
  constraints {
    validate subset(selected, allowed, [region, env]);
  };
}
