tests/invalid/invalid_subset_props_on_primitive.csl
config InvalidSubsetProps {
  allowed: string[];
  selected: string[];
  constraints {
    validate subset(selected, allowed, [id]);
  };
}
